fixes work not showing up on mobile, and makes space between menu items smaller on mobile

--- a/_sass/_work.scss
+++ b/_sass/_work.scss
@@ -16,7 +16,8 @@
     text-decoration: none;
     color:#000;
     background: darken(#fafafa, 2%);
-
+    visibility:visible;
+    
     &:hover{
       box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.15);
       .image{
